tests/error/poly_errors_py312/dependent2.py
from guppylang.decorator import guppy
from guppylang.std.lang import Copy, Drop


@guppy
def foo[T: (Copy, Drop), x: T]() -> None:
    pass


@guppy
def main() -> None:
    foo[int, 1.5]()


main.compile()
