tests/error/poly_errors_py312/dependent2.err
Error: Type mismatch (at $FILE:12:13)
   | 
10 | @guppy
11 | def main() -> None:
12 |     foo[int, 1.5]()
   |              ^^^ Expected argument of type `int`, got `float`

Guppy compilation failed due to 1 previous error
